Fixing the issue with search bar missalignment. Adding temp graph.

--- a/cloudsense/src/assets/dashboard.css
+++ b/cloudsense/src/assets/dashboard.css
@@ -1,7 +1,3 @@
-#searchBar {
-    float:left;
-}
-
 #helloMessage {
     width: 500px;
     height: 120px;
